2001-02-09  Alain Magloire

	Patch from Ulrich Drepper to provide hilighting.

	* src/grep.c : New option --color.
	(color) : New static var.
	(COLOR_OPTION) : new constant.
	(grep_color) : new static var.
	(prline) : Now when color is set prline() will call the current matcher
	to find the offset of the matching string.
	* src/savedir.c : Take advantage of _DIRENT_HAVE_TYPE if supported.
	* src/search.c (EGexecute, Fexecute, Pexecute): Take a new argument
	when doing exact match for the color hiligting.

2000-09-01  Brian Youmans

	* doc/grep.texi : Typo fixes.

2000-08-30  Paul Eggert

	* doc/grep.texi (Usage): Talk about what "grep -r hello *.c"
	means.

2000-08-20  Paul Eggert

	Handle range expressions correctly even when they match
	strings with two or more characters.

	* src/dfa.h (CRANGE): New enum value.  Comment fix.

	* src/dfa.c: Include <locale.h> if HAVE_SETLOCALE.
	Include "hard-locale.h".
	(prtok): Print CRANGE.
	(hard_LC_COLLATE): New static var.
	(lex): Return CRANGE when parsing a character range in a hard locale.
	Don't use strcoll; it's no longer needed and wasn't correct anyway.
	Use unsigned rather than token to hold unsigned chars.
	(addtok): Comment fix.
	(atom): Treat a CRANGE as if it were (.\1), approximately.
	(dfaparse): Initialize hard_LC_COLLATE.

	* src/Makefile.am (base_sources): Add hard-locale.c, hard-locale.h.

	* src/hard-locale.c, src/hard-locale.h: New files, taken from
	textutils.

2000-08-20  Paul Eggert

	* tests/Makefile.am (TESTS_ENVIRONMENT): Add LC_ALL=C, since
	some of the tests assume the C locale.

2000-08-16  Paul Eggert

	* src/search.c (Gcompile, Ecompile): -x overrides -w, for
	consistency with fgrep.  Don't assume that sizes fit in 'int'.
	Fix comments to match code.

2000-06-06  Paul Eggert

	* src/grep.c (grepdir): Don't look at st_dev when testing for
	Mingw32 bug.

2000-06-05  Paul Eggert

	Port to Mingw32, based on suggestions from Christian Groessler
	<cpg@aladdin.de>.
