@@ -2,3 +2,5 @@
 Makefile.in
 aclocal.m4
 configure
+config.log
+stamp-h.in
